--- a/WMS_DEPI_GRAD/appsettings.json
+++ b/WMS_DEPI_GRAD/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=WMS_DEPI_Db;Trusted_Connection=True;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
