--- a/WMS.BLL/WMS.BLL.csproj
+++ b/WMS.BLL/WMS.BLL.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\WMS.DL\WMS.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
